[metadata]
name = oneline_ml
version = 0.0.1
author = Murat Ali Avcu & Dogan Keskin
author_email = murataliavcu1@gmail.com
description = fastai with few lines to complete AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muratali016/Oneline_AI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6
include_package_data = True